k8s/backend-cluster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 8080
      targetPort: 8080
