k8s/frontend-cluster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
