k8s/react-cluster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-cluster-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
